--- a/styles.scss
+++ b/styles.scss
@@ -1,16 +1,23 @@
 $primary: #8E79BA;
 $secundary: #ffffff;
+$warning:  #ffc107;
+$info:  #0dcaf0;
+$success: #198754;
+$danger:  #dc3545;
+$dark: black;
+$light: #d613c2;
 
 
 $theme-colors:(
     "primary": $primary,
-    "secundary":$secundary,
-    "success":#198754,
-    "info":#0dcaf0,
-    "warning":#ffc107,
-    "danger": #dc3545,
-    "light":#f8f9fa,
-    "dark":#212529
+    "secundary": $secundary, 
+    "warning": $warning,
+    "info": $info,
+    "success": $success,
+    "danger" : $danger,
+    "dark" : $dark, 
+    "light" : $light
 );
 
-@import "./node_modules/bootstrap/scss/bootstrap.scss"
+
+@import "./node_modules/bootstrap/scss/bootstrap.scss";
